2010-08-27  Per Bothner  <per@bothner.com>

	* Procedure.java (inlineCallsKey): Remove constant field.

2010-08-26  Per Bothner  <per@bothner.com>

	* Procedure.java (inlinerKey): Remove constant field.
	(validateApplyKey): New constant field.

2010-08-20  Per Bothner  <per@bothner.com>

	* ThreadLocation.java (makePrivate): Renamed to ..
	(makeAnonymous): New method name.
	* NamedLocation.java: Update accordingly.

	* Location.java (setWithSave, setRestore): Remove unused ctx parameter.
	* NamedLocation.java: Likewise.
	* ConstrainedLocation.java: Likewise.
	* ThreadLocation.java: Likewise.

2010-08-19  Per Bothner  <per@bothner.com>

	Re-write fluid-variables and thread inheritance to make use of
	java.lang.InheritableThreadLocal, and so inheritance/fluids
	works even for threads not created using 'future'/RunnableClosure.
	* RunnableClosure.java:	Don't explicitly inherit Environments here
	- this is handled by InheritableThreadLocal.  Likewise don't
	clone bindings in the ClassContext.pushedFluids list, which is removed.
	(environment): Remove field.
	* CallContext.java (curEnvironment, currentThread): Remove fields.
	(getEnvironmentRaw, setEnvironmentRaw, getEnvironment): Remove methods.
	(pushFluid, popFluid): Remove methods.
	(pushedFluids, pushedFluidsCount): Remove fields.
	* ThreadLocation.java:  If ANONYMOUS use a InheritableThreadLocal,
	rather than a plain ThreadLocal.  Otherwise, use neither - just
	lookup in Environment.getCurrent().
	(class LocationRef): Remove local class.
	* Environment.java (class InheritedLocal): New member class which
	extends InheritableThreadLocal, and handles Environment inheritance.
	(curEnvironment): New static InheritedLocal field.
	(setCurrent): Re-implement to use curEnvironment.
	(setSaveCurrent, restoreCurrent): New static methods.
	* Location.java (setWithSave, setRestore): Don't call
	pushFluid/popFluid.
	* NamedLocation.java (setWithSave, setRestore): Likewise.